--- a/17-1. 트랜스포머(Transformer).md
+++ b/17-1. 트랜스포머(Transformer).md
@@ -839,5 +839,262 @@ def scaled_dot_product_attention(query, key, value, mask):
   
 - 트랜스포머에는 총 세 가지 어텐션이 존재하며, 모두 멀티 헤드 어텐션을 수행하고, 멀티 헤드 어텐션 함수 내부에서 스케일드 닷 프로덕트 어텐션 함수를 호출하는데 각 어텐션 시 함수에 전달하는 마스킹은 다음과 같음.
   - 인코더의 셀프 어텐션 : 패딩 마스크를 전달
-  - 디코더의 첫번째 서브층인 마스크드 셀프 어텐션 : 룩-어헤드 마스크를 전달 <-- 지금 배우고 있음.
-  - 디코더의 두번째 서브층인 인코더-디코더 어텐션 : 패딩 마스크를 전달
+  - 디코더의 첫번째 서브층인 마스크드 셀프 어텐션: 룩-어헤드 마스크를 전달
+  - 디코더의 두번째 서브층인 인코더-디코더 어텐션: 패딩 마스크를 전달
+
+- 이때, 룩-어헤드 마스크를 한다고해서 패딩 마스크가 불필요한 것이 아니므로 룩-어헤드 마스크는 패딩 마스크를 포함하도록 구현함.
+- 룩-어헤드 마스크를 구현하는 방법은 패딩 마스크 때와 마찬가지로 마스킹을 하고자 하는 위치에는 1을, 마스킹을 하지 않는 위치에는 0을 리턴하도록 함.
+
+```python
+# 디코더의 첫번째 서브층(sublayer)에서 미래 토큰을 Mask하는 함수
+def create_look_ahead_mask(x):
+  seq_len = tf.shape(x)[1]
+  look_ahead_mask = 1 - tf.linalg.band_part(tf.ones((seq_len, seq_len)), -1, 0)
+  padding_mask = create_padding_mask(x) # 패딩 마스크도 포함
+  return tf.maximum(look_ahead_mask, padding_mask)
+```
+- 임의의 정수 시퀀스 입력을 넣어서 결과를 봄: 패딩 마스크를 테스트 하기위해 세번째 위치에 정수 0을 넣음.
+                                                  
+```python
+print(create_look_ahead_mask(tf.constant([[1, 2, 0, 4, 5]])))
+```
+                                                  
+```python
+tf.Tensor(
+[[[[0. 1. 1. 1. 1.]
+   [0. 0. 1. 1. 1.]
+   [0. 0. 1. 1. 1.]
+   [0. 0. 1. 0. 1.]
+   [0. 0. 1. 0. 0.]]]], shape=(1, 1, 5, 5), dtype=float32)
+```    
+- 룩-어헤드 마스크이므로 삼각형 모양의 마스킹이 형성되면서, 패딩 마스크가 포함되어져 있으므로 세번째 열이 마스킹됨.
+
+## 17.1.14. 디코더의 두번째 서브층 : 인코더-디코더 어텐션
+- 디코더의 두번째 서브층은 멀티 헤드 어텐션을 수행한다는 점에서는 이전의 어텐션들(인코더와 디코더의 첫번째 서브층)과 같지만, 셀프 어텐션은 아님.
+- 셀프 어텐션은 Query, Key, Value가 같은 경우를 말하는데, 인코더-디코더 어텐션은 Query가 디코더인 행렬인 반면, Key와 Value는 인코더 행렬이기 때문
+
+```
+인코더의 첫번째 서브층 : Query = Key = Value
+디코더의 첫번째 서브층 : Query = Key = Value
+디코더의 두번째 서브층 : Query : 디코더 행렬 / Key = Value : 인코더 행렬
+```
+
+- 디코더의 두번째 서브층을 확대해보면, 다음과 같이 인코더로부터 두 개의 화살표가 그려져 있음.
+  
+![image](https://user-images.githubusercontent.com/42113942/132121180-29404704-4a66-42f2-80ef-c4de73f2896a.png)
+
+  - 두 개의 화살표는 각각 Key와 Value를 의미하며, 이는 인코더의 마지막 층에서 온 행렬로부터 얻음.
+  - 반면, Query는 디코더의 첫번째 서브층의 결과 행렬로부터 얻는다는 점이 다름.
+
+- Query가 디코더 행렬, Key가 인코더 행렬일 때, 어텐션 스코어 행렬을 구하는 과정은 다음과 같음.
+  
+![image](https://user-images.githubusercontent.com/42113942/132121200-f0f488d9-922c-42ea-986e-6ed98fc7e62e.png)
+
+- 그 외에 멀티 헤드 어텐션을 수행하는 과정은 다른 어텐션들과 같음.
+  
+## 17.1.15. 디코더 구현하기
+```python
+def decoder_layer(dff, d_model, num_heads, dropout, name="decoder_layer"):
+  inputs = tf.keras.Input(shape=(None, d_model), name="inputs")
+  enc_outputs = tf.keras.Input(shape=(None, d_model), name="encoder_outputs")
+
+  # 룩어헤드 마스크(첫번째 서브층)
+  look_ahead_mask = tf.keras.Input(
+      shape=(1, None, None), name="look_ahead_mask")
+
+  # 패딩 마스크(두번째 서브층)
+  padding_mask = tf.keras.Input(shape=(1, 1, None), name='padding_mask')
+
+  # 멀티-헤드 어텐션 (첫번째 서브층 / 마스크드 셀프 어텐션)
+  attention1 = MultiHeadAttention(
+      d_model, num_heads, name="attention_1")(inputs={
+          'query': inputs, 'key': inputs, 'value': inputs, # Q = K = V
+          'mask': look_ahead_mask # 룩어헤드 마스크
+      })
+
+  # 잔차 연결과 층 정규화
+  attention1 = tf.keras.layers.LayerNormalization(
+      epsilon=1e-6)(attention1 + inputs)
+
+  # 멀티-헤드 어텐션 (두번째 서브층 / 디코더-인코더 어텐션)
+  attention2 = MultiHeadAttention(
+      d_model, num_heads, name="attention_2")(inputs={
+          'query': attention1, 'key': enc_outputs, 'value': enc_outputs, # Q != K = V
+          'mask': padding_mask # 패딩 마스크
+      })
+
+  # 드롭아웃 + 잔차 연결과 층 정규화
+  attention2 = tf.keras.layers.Dropout(rate=dropout)(attention2)
+  attention2 = tf.keras.layers.LayerNormalization(
+      epsilon=1e-6)(attention2 + attention1)
+
+  # 포지션 와이즈 피드 포워드 신경망 (세번째 서브층)
+  outputs = tf.keras.layers.Dense(units=dff, activation='relu')(attention2)
+  outputs = tf.keras.layers.Dense(units=d_model)(outputs)
+
+  # 드롭아웃 + 잔차 연결과 층 정규화
+  outputs = tf.keras.layers.Dropout(rate=dropout)(outputs)
+  outputs = tf.keras.layers.LayerNormalization(
+      epsilon=1e-6)(outputs + attention2)
+
+  return tf.keras.Model(
+      inputs=[inputs, enc_outputs, look_ahead_mask, padding_mask],
+      outputs=outputs,
+      name=name)
+```
+- 디코더는 총 세 개의 서브층으로 구성됨: 첫번째와 두번째 서브층 모두 멀티 헤드 어텐션이지만, 첫번째 서브층은 mask의 인자값으로 look_ahead_mask가 들어가는 반면, 두번째 서브층은 mask의 인자값으로 padding_mask가 들어가는 것을 확인할 수 있음. 이는 첫번째 서브층은 마스크드 셀프 어텐션을 수행하기 때문.
+- 세 개의 서브층 모두 서브층 연산 후에는 드롭 아웃, 잔차 연결, 층 정규화가 수행됨.
+
+- 인코더와 마찬가지로 디코더도 num_layers개만큼 쌓는 코드가 필요함.
+  
+## 17.1.16. 디코더 쌓기
+```python  
+def decoder(vocab_size, num_layers, dff,
+            d_model, num_heads, dropout,
+            name='decoder'):
+  inputs = tf.keras.Input(shape=(None,), name='inputs')
+  enc_outputs = tf.keras.Input(shape=(None, d_model), name='encoder_outputs')
+
+  # 디코더는 룩어헤드 마스크(첫번째 서브층)와 패딩 마스크(두번째 서브층) 둘 다 사용.
+  look_ahead_mask = tf.keras.Input(
+      shape=(1, None, None), name='look_ahead_mask')
+  padding_mask = tf.keras.Input(shape=(1, 1, None), name='padding_mask')
+
+  # 포지셔널 인코딩 + 드롭아웃
+  embeddings = tf.keras.layers.Embedding(vocab_size, d_model)(inputs)
+  embeddings *= tf.math.sqrt(tf.cast(d_model, tf.float32))
+  embeddings = PositionalEncoding(vocab_size, d_model)(embeddings)
+  outputs = tf.keras.layers.Dropout(rate=dropout)(embeddings)
+
+  # 디코더를 num_layers개 쌓기
+  for i in range(num_layers):
+    outputs = decoder_layer(dff=dff, d_model=d_model, num_heads=num_heads,
+        dropout=dropout, name='decoder_layer_{}'.format(i),
+    )(inputs=[outputs, enc_outputs, look_ahead_mask, padding_mask])
+
+  return tf.keras.Model(
+      inputs=[inputs, enc_outputs, look_ahead_mask, padding_mask],
+      outputs=outputs,
+      name=name)  
+```
+  
+## 17.1.17. 트랜스포머 구현하기
+- 이제 지금까지 구현한 인코더와 디코더 함수를 조합하여 트랜스포머를 조립할 차례
+- 인코더의 출력은 디코더에서 인코더-디코더 어텐션에서 사용되기 위해 디코더로 전달해줌.
+- 디코더의 끝단에는 다중 클래스 분류 문제를 풀 수 있도록, vocab_size 만큼의 뉴런을 가지는 신경망을 추가해줌.
+  
+```python
+def transformer(vocab_size, num_layers, dff,
+                d_model, num_heads, dropout,
+                name="transformer"):
+
+  # 인코더의 입력
+  inputs = tf.keras.Input(shape=(None,), name="inputs")
+
+  # 디코더의 입력
+  dec_inputs = tf.keras.Input(shape=(None,), name="dec_inputs")
+
+  # 인코더의 패딩 마스크
+  enc_padding_mask = tf.keras.layers.Lambda(
+      create_padding_mask, output_shape=(1, 1, None),
+      name='enc_padding_mask')(inputs)
+
+  # 디코더의 룩어헤드 마스크(첫번째 서브층)
+  look_ahead_mask = tf.keras.layers.Lambda(
+      create_look_ahead_mask, output_shape=(1, None, None),
+      name='look_ahead_mask')(dec_inputs)
+
+  # 디코더의 패딩 마스크(두번째 서브층)
+  dec_padding_mask = tf.keras.layers.Lambda(
+      create_padding_mask, output_shape=(1, 1, None),
+      name='dec_padding_mask')(inputs)
+
+  # 인코더의 출력은 enc_outputs. 디코더로 전달된다.
+  enc_outputs = encoder(vocab_size=vocab_size, num_layers=num_layers, dff=dff,
+      d_model=d_model, num_heads=num_heads, dropout=dropout,
+  )(inputs=[inputs, enc_padding_mask]) # 인코더의 입력은 입력 문장과 패딩 마스크
+
+  # 디코더의 출력은 dec_outputs. 출력층으로 전달된다.
+  dec_outputs = decoder(vocab_size=vocab_size, num_layers=num_layers, dff=dff,
+      d_model=d_model, num_heads=num_heads, dropout=dropout,
+  )(inputs=[dec_inputs, enc_outputs, look_ahead_mask, dec_padding_mask])
+
+  # 다음 단어 예측을 위한 출력층
+  outputs = tf.keras.layers.Dense(units=vocab_size, name="outputs")(dec_outputs)
+
+  return tf.keras.Model(inputs=[inputs, dec_inputs], outputs=outputs, name=name)
+```
+  
+## 17.1.18. 트랜스포머 하이퍼파라미터 정하기
+- 이제 트랜스포머의 하이퍼파라미터를 임의로 정하고, 모델을 만들기
+- 현재 훈련 데이터가 존재하는 것은 아니지만, 단어 집합의 크기는 임의로 9,000으로 정함.
+- 단어 집합의 크기로부터 룩업 테이블을 수행할 임베딩 테이블과 포지셔널 인코딩 행렬의 행의 크기를 결정할 수 있음.
+  
+- 여기서는 논문에서 제시한 것과는 조금 다르게 하이퍼파라미터를 정함.
+  - num_layers = 4; 인코더와 디코더의 층의 개수 
+  - dff = 128; 인코더와 디코더의 포지션 와이즈 피드 포워드 신경망의 은닉층
+  - dmodel = 128; 인코더와 디코더의 입, 출력의 차원
+  - num_heads = 4; 멀티-헤드 어텐션에서 병렬적으로 사용할 헤드의 수
+  - dv = 128/4 = 32
+  
+```python
+small_transformer = transformer(
+    vocab_size = 9000,
+    num_layers = 4,
+    dff = 512,
+    d_model = 128,
+    num_heads = 4,
+    dropout = 0.3,
+    name="small_transformer")
+
+tf.keras.utils.plot_model(
+    small_transformer, to_file='small_transformer.png', show_shapes=True)
+```  
+
+## 17.1.19. 손실 함수 정의하기
+- 다중 클래스 분류 문제를 풀 예정이므로 크로스 엔트로피 함수를 손실 함수로 정의함.
+```python
+def loss_function(y_true, y_pred):
+  y_true = tf.reshape(y_true, shape=(-1, MAX_LENGTH - 1))
+
+  loss = tf.keras.losses.SparseCategoricalCrossentropy(
+      from_logits=True, reduction='none')(y_true, y_pred)
+
+  mask = tf.cast(tf.not_equal(y_true, 0), tf.float32)
+  loss = tf.multiply(loss, mask)
+
+  return tf.reduce_mean(loss)
+```
+  
+## 17.1.20. 학습률
+- 트랜스포머의 경우 학습률(learning rate)은 고정된 값을 유지하는 것이 아니라, 학습 경과에 따라 변하도록 설계함.
+  - 아래의 공식으로 학습률을 계산하여 사용하였으며, warmup_steps의 값으로는 4,000을 사용함.
+  
+```python
+class CustomSchedule(tf.keras.optimizers.schedules.LearningRateSchedule):
+
+  def __init__(self, d_model, warmup_steps=4000):
+    super(CustomSchedule, self).__init__()
+    self.d_model = d_model
+    self.d_model = tf.cast(self.d_model, tf.float32)
+    self.warmup_steps = warmup_steps
+
+  def __call__(self, step):
+    arg1 = tf.math.rsqrt(step)
+    arg2 = step * (self.warmup_steps**-1.5)
+
+    return tf.math.rsqrt(self.d_model) * tf.math.minimum(arg1, arg2)
+```
+  
+```python
+sample_learning_rate = CustomSchedule(d_model=128)
+
+plt.plot(sample_learning_rate(tf.range(200000, dtype=tf.float32)))
+plt.ylabel("Learning Rate")
+plt.xlabel("Train Step")
+  
+Text(0.5, 0, 'Train Step')
+```
+
+![image](https://user-images.githubusercontent.com/42113942/132121616-b7356ff9-08a2-44cc-85c0-9a504b8459fb.png)
+
